--- a/SerializacionAndDeseralizacion/SerializacionAndDeseralizacion.csproj
+++ b/SerializacionAndDeseralizacion/SerializacionAndDeseralizacion.csproj
@@ -1,10 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>disabled</Nullable>
+		<NoWarn>$(NoWarn);SYSLIB0001</NoWarn>
+		<!-- To suppress multiple warnings, you can use multiple NoWarn elements -->
+		<NoWarn>$(NoWarn);SYSLIB0002</NoWarn>
+		<NoWarn>$(NoWarn);SYSLIB0003</NoWarn>
+		<!-- Alternatively, you can suppress multiple warnings by using a semicolon-delimited list -->
+		<NoWarn>$(NoWarn);SYSLIB0001;SYSLIB0002;SYSLIB0003</NoWarn>
+	</PropertyGroup>
 
 </Project>
